--- a/IoTProject_dec28a/ReadMe.adoc
+++ b/IoTProject_dec28a/ReadMe.adoc
@@ -1,54 +1,51 @@
 :Author: vedatoz
-:Email:
-:Date: 28/12/2023
-:Revision: version#
+:Email: bluhbluh@gmail.com
+:Date: 11/01/2024
 :License: Public Domain
 
-= Project: {Project}
+= Project: {Room Metrics Tracker}
 
-Describe your project
+An IoT project that uses sensors to monitor environmental parameters, and sends email notifications on exceeded decibel threshold.
 
 == Step 1: Installation
-Please describe the steps to install this project.
 
-For example:
-
-1. Open this file
-2. Edit as you like
-3. Release to the World!
+1. Login to Arduino IoT Cloud platform and create a dashboard with variables; Humidity, Temperature, Noise.
+2. You can bind this variables to corresponding visualizations on your dashboard. E.g. chart for noise, gauge for temperature, percentage for humidity..
+2. Open the project folder on Arduino IoT Cloud platform.
+3. Edit arduino_secrets.h file with your Wi-fi credentials and your Arduino IoT Cloud dashboard secret key.
+4. Check the rest of the codes in the header files/main code in case of compatibility errors. 
 
 == Step 2: Assemble the circuit
 
-Assemble the circuit following the diagram layout.png attached to the sketch
+Assemble the circuit following the diagram in IoTProj_circuit.png file.
 
 == Step 3: Load the code
 
-Upload the code contained in this sketch on to your board
+Upload the code contained in the .ino file to your nodeMCU esp8266 board.
 
 === Folder structure
 
 ....
- sketch123                => Arduino sketch folder
-  ├── sketch123.ino       => main Arduino file
-  ├── schematics.png      => (optional) an image of the required schematics
-  ├── layout.png          => (optional) an image of the layout
-  └── ReadMe.adoc         => this file
-....
+ IotProject_dec28a           => Arduino sketch folder
+  ├── IotProject_dec28a.ino       => main Arduino file
+  ├── arduino_secrets.h           => header file for credentials
+  ├── sketch.json                 => json file for Cloud
+  ├── thingProperties.h           => header file for binding the Cloud service to the main code
+  └── ReadMe.adoc                 => this file
+ IotProj.fzz                 => fritzing file of circuit (if you want to edit the circuit on Fritzing software)
+ IotProj_circuit.png         => an image of the circuit diagram
+ sensors.jpg                 => an image of the actual circuit
 
-=== License
-This project is released under a {License} License.
 
-=== Contributing
-To contribute to this project please contact: 
 
-=== BOM
-Add the bill of the materials you need for this project.
+=== Materials you need for this project
 
 |===
-| ID | Part name      | Part number | Quantity
-| R1 | 10k Resistor   | 1234-abcd   | 10       
-| L1 | Red LED        | 2345-asdf   | 5        
-| A1 | Arduino Zero   | ABX00066    | 1        
+| Arduino nodeMCU esp8266
+| DHT-11 Temperature/Humidity Sensor      
+| LM-393 Sound Sensor      
+| Jumper Cables 
+| Resistor (for DHT-11)
 |===
 
 
